--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">MAD Mapping</string>
     <string name="choosemap">Choose Map Style</string>
-    <string name="regularview">Regular view</string>
-    <string name="cyclemapview">Cycle Map view</string>
+    <string name="regularview">Regular View</string>
+    <string name="cyclemapview"> Cycle Map View</string>
 </resources>
